network-policies/default-deny-test.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
   name: default-deny
   namespace: knp-test
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
