network-policies/storefront-deny-rule.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-backend
  namespace: storefront
spec:
  podSelector:
    matchLabels:
      app: backend
  egress: []
